# opensarm

./: .gitignore  LICENSE  README.md  eval.py  make_demo_video.py  normalizer.py  pred_smoother.py  pyproject.toml  train.py  train_utils.py
assets/: fold_tshirt.json
config/: rewind.yaml  sarm.yaml
lerobot/common/datasets/: lerobot_dataset.py  rm_lerobot_dataset.py
models/: clip_encoder.py  rewind_reward_model.py  stage_estimator.py  subtask_estimator.py
utils/: data_utils.py  raw_data_utils.py  train_utils.py
workspace/: rewind_ws.py  sarm_ws.py
